# Reefiki

./: .gitignore  AGENTS.md  COMMANDS.md  QUICKSTART.md  README.en.md  README.md  README.zh-CN.md  pyproject.toml
.agents/skills/local-agent-delegation/: SKILL.md
.agents/skills/source-command-connect/: SKILL.md
.claude/commands/: connect.md  new.md
.github/workflows/: ci.yml  publish-python.yml
assets/video/: reefiki-agent-agnostic.webm  reefiki-comparison.webm  reefiki-distillation.webm  reefiki-final-cta.webm  reefiki-flow.webm  reefiki-memory-types.webm  reefiki-problem-context.webm  reefiki-safety.webm  reefiki-token-economy.webm
docs/: BACKLOG_TRIGGER_GATE_CLOSEOUT_2026-06-26.md  DASHBOARD_DEMO.md  INSTALL.md  LEADOPS.md  OPERATOR_COMMANDS.md  PROJECT_PROFILES.md  PUBLIC_BACKLOG.md  PUBLIC_DEMO.md  PUBLIC_ROADMAP.md  TESTING.md  WORKTREE_LIFECYCLE.md  obsidian-setup.md
docs/diagrams/: README.md  reefiki-l1-high-level-architecture.drawio  reefiki-l2-core-services-and-adapters.drawio  reefiki-l3-project-workspace-dataflow.drawio
docs/neagi/core/: 004-verify-intent.md
docs/neagi/realtime/: 006-neagi-bridge.md  023-reefiki-context-recovery.md
docs/neagi/sidequests/: 002-publish-guard.md  017-teamlead-integration-owner.md  019-source-of-truth-diagnostics.md  020-browser-runtime-smoke.md  022-durable-harvest-closeout.md
docs/skill-products/: AGENT_READINESS_README_BLOCK.md  AGENT_READINESS_SPEC.md
projects/_template/: AGENTS.md
projects/_template/wiki/: _schema.md
projects/reefiki-demo/: AGENTS.md  _domain.md  golden-queries.yml
projects/reefiki-demo/wiki/: index.md  log.md
scripts/: mimo_memory_integration.py  public-snapshot.exclude.txt  public-snapshot.private-projects.txt  public-snapshot.public-projects.txt  reefiki.py  validate_frontmatter.py
scripts/reefiki_agent_readiness/: __init__.py
scripts/reefiki_core/: capture_evidence.py  code_context.py  confidence_pass.py  connect_check.py  graphify_adapter.py  guard_staged.py  guided_tour.py  harvest_commit.py  init_workspace.py  markdown_import.py  memory_diff.py  memory_explain.py  memory_golden.py  memory_lookup.py  memory_status.py  notify.py  obligations_extract.py  onboarding.py  plans.py  policy_evidence.py  project_commands.py  project_paths.py  public_snapshot.py  publish_classification.py  publish_task.py  review_queues.py  secret_scan.py  status.py  test_observability.py  verify_intent.py  visibility_audit.py  wiki_lock.py  wiki_write.py
scripts/reefiki_memory/: __init__.py
site/: index.html  script.js  styles.css
tests/: test_agent_flow_e2e.py  test_agent_readiness.py  test_ci_workflow.py  test_codex_plugin_packaging_docs.py  test_install_smoke.py  test_local_agent_delegate.py  test_mimo_memory_integration.py  test_packaging_legal.py  test_public_snapshot_guard.py  test_pytest_observability.py  test_reefiki_cli_first_run.py  test_reefiki_core_capture_evidence.py  test_reefiki_core_code_context.py  test_reefiki_core_confidence_pass.py  test_reefiki_core_connect_check.py  test_reefiki_core_graphify_adapter.py  test_reefiki_core_guard_staged.py  test_reefiki_core_guided_tour.py  test_reefiki_core_harvest_commit.py  test_reefiki_core_init_workspace.py  test_reefiki_core_link_confidence.py  test_reefiki_core_markdown_import.py  test_reefiki_core_memory_explain.py  test_reefiki_core_memory_golden.py  test_reefiki_core_memory_lookup.py  test_reefiki_core_memory_preflight.py  test_reefiki_core_memory_status.py  test_reefiki_core_notify.py  test_reefiki_core_obligations_extract.py  test_reefiki_core_onboarding.py  test_reefiki_core_ops_dashboard.py  test_reefiki_core_orchestration_check.py  test_reefiki_core_plans.py  test_reefiki_core_policy_evidence.py  test_reefiki_core_project_commands.py  test_reefiki_core_project_paths.py  test_reefiki_core_public_snapshot.py  test_reefiki_core_publish_classification.py  test_reefiki_core_publish_task.py  test_reefiki_core_retrieval_benchmark.py  (+9 more)
(+21 files in other folders)
